updated sessions and users controllers

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,115 +1,57 @@
-@media screen {
-  /* --- Reset Styles --- */
-  * {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-
-  html, body {
-    height: 100%;
-    width: 100%;
-  }
-
-  /* --- Welcome Page Styles --- */
-  body {
-    background-color: lightblue;
-    color: #333;
-    font-family: Sans-Serif;
-    line-height: 18px;
-  }
-
-  .wrapper {
-    background: #fff;
-    -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
-    -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
-    box-shadow: 0 0 10px rgba(0,0,0,.3);
-    margin: 16px auto;
-    max-width: 960px;
-    padding: 2.25%; /* 18px / 800px */
-    width: 85%;
-  }
-
-  h1 {
-    font-size: 36px;
-    line-height: 54px;
-  }
-
-  h2 {
-    border-bottom: 2px solid #ccc;
-    font-size: 24px;
-    line-height: 36px;
-    margin-bottom: 16px;
-  }
-
-  h3 {
-    font-size: 18px;
-    line-height: 36px;
-  }
-
-  p {
-    margin-bottom: 18px;
-  }
-
-  .main {
-    overflow: hidden;
-  }
-
-  .content {
-    float: left;
-    width: 60%; /* 480px / 800px */
-  }
-
-  .sidebar {
-    background: #eee;
-    border: 1px solid #ccc;
-    float: right;
-    padding: 2.08333333333%; /* 5px / 240px */
-    width: 30%; /* 240px / 800px */
-  }
-
-  .sidebar ul {
-    font-size: 14px;
-  }
-
-  .branding {
-    clear: both;
-  }
-
-  footer.branding {
-    border-top: 2px solid #ccc;
-    margin-top: 20px;
-    padding-top: 20px;
-  }
+#navbar {
+  z-index: 2;
 }
 
-@media screen and (max-width: 600px) {
-  .wrapper {
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    width: auto;
-  }
+.landing h1{
+  color: indianred;
+  text-decoration: none;
+} 
 
-  .content, .sidebar {
-    float: none;
-    width: 100%;
-  }
+*{margin:0;padding:0;}
 
-  .sidebar {
-    background: transparent;
-    border: none;
-    border-top: 2px solid #ccc;
-    padding: 0;
-  }
-
-  h1 {
-    font-size: 24px;
-    line-height: 36px;
-  }
-
-  h2 {
-    font-size: 18px;
-    line-height: 24px;
-  }
+ul,li{list-style:none;margin:0;padding:0;}
+.slide{height:89.5vh;overflow:hidden;}
+.slide ul{width:calc(100% * 4);display:flex;animation:slide 20s infinite;}
+.slide li{
+  width:calc(100% / 4);
+  height:92vh;
+}
+.slide li:nth-child(1){
+  background:#ffa;
+  background: url("https://source.unsplash.com/-e6Xu27_T50/900x600/");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size:cover;
+}
+.slide li:nth-child(2){
+  background:#faa;
+  background: url("https://source.unsplash.com/wh-7GeXxItI/900x600/");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size:cover;
+}
+.slide li:nth-child(3){
+  background:#afa;
+  background: url("https://source.unsplash.com/3dPHz0i70RI/900x600/");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size:cover;
+}
+.slide li:nth-child(4){
+  background:#aaf;
+  background: url("https://source.unsplash.com/RM_cZwVPuCk/900x600/");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size:cover;
+}
+@keyframes slide {
+  0% {margin-left:0;} 
+  22% {margin-left:0;}
+  25% {margin-left:-100%;}
+  47% {margin-left:-100%;}
+  50% {margin-left:-200%;}
+  72% {margin-left:-200%;}
+  75% {margin-left:-300%;}
+  97% {margin-left:-300%;}
+  100% {margin-left:0;}
 }
