--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,32 +1,53 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+<!doctype html>
+<html lang="en">
 
-    <title>DayNamesSinatra</title>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+        <link rel="stylesheet" href="/stylesheets/layout.css">
+        <link rel="stylesheet" href="/stylesheets/main.css">
+        <title>The Day Name Generator</title>
+    <head>
 
-    <link rel="stylesheet" href="/stylesheets/main.css" />
-  </head>
-  <body>
-    <div class="wrapper">
+    <body>
 
-        <%= yield %>
+        <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">The Day Name Generator</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigtion">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-      <footer class="branding">
-        <small>&copy; 2021 <strong>DayNamesSinatra</strong></small>
-      </footer>
-    </div>
+                <div class="collapse navbar-collapse navbarSupportedContent">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active" aria-curent="page" href="/daynames">Name meanings</a>
+                    <% if not logged_in? %>
+                    <a class="nav-item nav-link" href="/signup">Sign Up</a>
+                    <a class="nav-item nav-link" href="/login">Log In</a>
+                    <% else %>
+                    <a class="nav-item nav-link" href="/namelist">Ghanaian Day Name List</a>
+                    <% end %>
+                </div>
+                <div class="nav navbar-nav ms-auto">
+                    <% if logged_in? %>
+                    <a class="nav-item nav-link" href="/users/<%= current_user.id %>">Welcome, <%= current_user.username.upcase %></a>
+                    <a class="nav-item nav-link me-3" href="/logout">Log Out</a>
+                    <% end %>
+                </div>
+            </div>
+        </nav>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-    <!--[if lt IE 7]>
-      <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.2/CFInstall.min.js"></script>
-      <script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})})</script>
-    <![endif]-->
-  </body>
+        <% if flash[:message] %>
+        <div class="alert alert-warning alert-dismissible fade show text-center" role="alert">
+        <span><%= flash[:message] %></span>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        <% end %>
+    
+     <%= yield %>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"crossorigin="anonymous"></script>
+    </body>  
 </html>
+
