updated seeds and names controller

--- a/app/views/names/index.erb
+++ b/app/views/names/index.erb
@@ -1,7 +1,11 @@
 <div class="container mt-5 mb-5 text-center">
   <h1>Choose a Day Name</h1>
-    
-  
+
+  <% @namesof_user.each do |name| %>
+      name
+    <% end %>
+
+
 
   <a href="/">back to main</a>
 </div>
