updated show and edit pages

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -26,6 +26,7 @@
                     <% if not logged_in? %>
                     <a class="nav-item nav-link" href="/signup">Sign Up</a>
                     <a class="nav-item nav-link" href="/login">Log In</a>
+                    <a class="nav-item nav-link" href="/logout">Log Out</a>
                     <% else %>
                     <a class="nav-item nav-link" href="/namelist">Ghanaian Day Name List</a>
                     <% end %>
