--- a/app/views/names/index.erb
+++ b/app/views/names/index.erb
@@ -1,11 +1,9 @@
 <div class="container mt-5 mb-5 text-center">
   <h1>Choose a Day Name</h1>
-
-  <% @namesof_user.each do |name| %>
-      name
-    <% end %>
-
-
-
-  <a href="/">back to main</a>
+  <% @names.each do |name| %>
+  <a href="names/<%=name.id%>"><%= name.who %></a> :<%= name.birthname%> X<%= name.id%>
+    <br>
+  <% end %>
+  
+<a href="/">back to main</a>
 </div>
