--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -13,6 +13,10 @@
 
 <div class="container ml-5 mr-5">
   <form action="/users" method="POST">
+  <div class="mb-3">
+      <label for="name" class="form-label">Name</label>
+      <input type="text" class="form-control" name="name"  placeholder="required" required>
+    </div>
     <div class="mb-3">
       <label for="username" class="form-label">Username</label>
       <input type="text" class="form-control" name="username"  placeholder="required" required>
@@ -21,10 +25,10 @@
       <label for="password" class="form-label">Password</label>
       <input type="password" class="form-control" name="password"  placeholder="required" required>
     </div>
-    <div class="mb-3">
-      <label for="password_confirm" class="form-label">Confirm Password</label>
-      <input type="password" class="form-control" name="password_confirm" placeholder="required" required>
-    </div>
+    <%# <div class="mb-3"> %>
+      <%# <label for="password_confirm" class="form-label">Confirm Password</label> %>
+      <%# <input type="password" class="form-control" name="password_confirm" placeholder="required" required> %>
+    <%# </div> %>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 </div>
