--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,5 +1,5 @@
 <div id="landing" class="position-absolute top-50 start-50 translate-middle">
-    <a href="names/new" class="text-center link-danger">
+    <a href="/signup" class="text-center link-danger">
      <button type="button" class="fw-bolder btn btn-outline-warning btn-lg">Welcome To The Day Name Generator!</button>
     </a>
 </div>
