--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -15,14 +15,14 @@
 <% end %>
 
 <h2 class="text-center mt-5 mb-5">
-    - <a class="text-center" href="/users/<%= @user.id %>/posts"><strong>All Your Names</strong></a> -
+    - <a class="text-center" href="/names"><strong>All Your Names</strong></a> -
 </h2>
 
 <h2 class="text-center mt-5 mb-3">- Names You Posted for -</h2>
   <% @user.names.uniq.each do |name| %>
     <div class="d-grid">
       <button class="btn btn-outline-light ms-auto me-auto" role="alert" style="width: fit-content;">
-        <h4 class="text-center"><a href="/namelist/<%= name.id %>"><%= name.name %></a></h4>
+        <h4 class="text-center"><a href="/names/<%= name.id %>"><%= name.name %></a></h4>
       </button>
     </div>
   <% end %>
